lab3/syntax.output
Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | error SEMI
    8       | Specifier error
    9       | Specifier error SEMI

   10 ExtDecList: VarDec
   11           | VarDec COMMA ExtDecList
   12           | VarDec error ExtDecList

   13 Specifier: TYPE
   14          | StructSpecifier

   15 StructSpecifier: STRUCT OptTag LC DefList RC
   16                | STRUCT Tag

   17 OptTag: ID
   18       | %empty

   19 Tag: ID

   20 VarDec: ID
   21       | VarDec LB INT RB
   22       | VarDec LB error RB

   23 FunDec: ID LP VarList RP
   24       | ID LP RP
   25       | ID LP error RP

   26 VarList: ParamDec COMMA VarList
   27        | ParamDec

   28 ParamDec: Specifier VarDec

   29 CompSt: LC DefList StmtList RC

   30 StmtList: Stmt StmtList
   31         | %empty

   32 Stmt: Exp SEMI
   33     | Exp error SEMI
   34     | CompSt
   35     | RETURN Exp SEMI
   36     | IF LP Exp RP Stmt
   37     | IF LP Exp RP Stmt ELSE Stmt
   38     | WHILE LP Exp RP Stmt
   39     | error SEMI
   40     | Exp error
   41     | RETURN Exp error
   42     | IF LP error RP Stmt
   43     | IF LP error RP Stmt ELSE Stmt
   44     | WHILE LP error RP Stmt

   45 DefList: Def DefList
   46        | %empty

   47 Def: Specifier DecList SEMI
   48    | Specifier error SEMI
   49    | Specifier DecList error

   50 DecList: Dec
   51        | Dec COMMA DecList

   52 Dec: VarDec
   53    | VarDec ASSIGNOP Exp

   54 Exp: Exp ASSIGNOP Exp
   55    | Exp AND Exp
   56    | Exp OR Exp
   57    | Exp RELOP Exp
   58    | Exp PLUS Exp
   59    | Exp MINUS Exp
   60    | Exp STAR Exp
   61    | Exp DIV Exp
   62    | LP Exp RP
   63    | MINUS Exp
   64    | NOT Exp
   65    | ID LP Args RP
   66    | ID LP RP
   67    | Exp LB Exp RB
   68    | Exp DOT ID
   69    | ID
   70    | INT
   71    | FLOAT
   72    | Exp ASSIGNOP error
   73    | Exp AND error
   74    | Exp OR error
   75    | Exp RELOP error
   76    | Exp PLUS error
   77    | Exp MINUS error
   78    | Exp STAR error
   79    | Exp DIV error
   80    | LP error RP
   81    | MINUS error
   82    | NOT error
   83    | ID LP error RP
   84    | Exp LB error RB
   85    | Exp LB Exp error RB

   86 Args: Exp COMMA Args
   87     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 7 8 9 12 22 25 33 39 40 41 42 43 44 48 49 72 73 74 75 76
    77 78 79 80 81 82 83 84 85
ASSIGNOP (258) 53 54 72
OR (259) 56 74
AND (260) 55 73
RELOP (261) 57 75
PLUS (262) 58 76
MINUS (263) 59 63 77 81
STAR (264) 60 78
DIV (265) 61 79
NOT (266) 64 82
DOT (267) 68
MINUSINT (268)
LB (269) 21 22 67 84 85
RB (270) 21 22 67 84 85
LP (271) 23 24 25 36 37 38 42 43 44 62 65 66 80 83
RP (272) 23 24 25 36 37 38 42 43 44 62 65 66 80 83
THEN (273)
ELSE (274) 37 43
INT (275) 21 70
FLOAT (276) 71
TYPE (277) 13
STRUCT (278) 15 16
RETURN (279) 35 41
IF (280) 36 37 42 43
WHILE (281) 38 44
ID (282) 17 19 20 23 24 25 65 66 68 69 83
SEMI (283) 4 5 7 9 32 33 35 39 47 48
COMMA (284) 11 26 51 86
LC (285) 15 29
RC (286) 15 29


Nonterminals, with rules where they appear

$accept (32)
    on left: 0
Program (33)
    on left: 1, on right: 0
ExtDefList (34)
    on left: 2 3, on right: 1 2
ExtDef (35)
    on left: 4 5 6 7 8 9, on right: 2
ExtDecList (36)
    on left: 10 11 12, on right: 4 11 12
Specifier (37)
    on left: 13 14, on right: 4 5 6 8 9 28 47 48 49
StructSpecifier (38)
    on left: 15 16, on right: 14
OptTag (39)
    on left: 17 18, on right: 15
Tag (40)
    on left: 19, on right: 16
VarDec (41)
    on left: 20 21 22, on right: 10 11 12 21 22 28 52 53
FunDec (42)
    on left: 23 24 25, on right: 6
VarList (43)
    on left: 26 27, on right: 23 26
ParamDec (44)
    on left: 28, on right: 26 27
CompSt (45)
    on left: 29, on right: 6 34
StmtList (46)
    on left: 30 31, on right: 29 30
Stmt (47)
    on left: 32 33 34 35 36 37 38 39 40 41 42 43 44, on right: 30 36
    37 38 42 43 44
DefList (48)
    on left: 45 46, on right: 15 29 45
Def (49)
    on left: 47 48 49, on right: 45
DecList (50)
    on left: 50 51, on right: 47 49 51
Dec (51)
    on left: 52 53, on right: 50 51
Exp (52)
    on left: 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71
    72 73 74 75 76 77 78 79 80 81 82 83 84 85, on right: 32 33 35 36
    37 38 40 41 53 54 55 56 57 58 59 60 61 62 63 64 67 68 72 73 74
    75 76 77 78 79 84 85 86 87
Args (53)
    on left: 86 87, on right: 65 86


State 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

    7 ExtDef: error . SEMI

    SEMI  shift, and go to state 9


State 2

   13 Specifier: TYPE .

    $default  reduce using rule 13 (Specifier)


State 3

   15 StructSpecifier: STRUCT . OptTag LC DefList RC
   16                | STRUCT . Tag

    ID  shift, and go to state 10

    $default  reduce using rule 18 (OptTag)

    OptTag  go to state 11
    Tag     go to state 12


State 4

    0 $accept: Program . $end

    $end  shift, and go to state 13


State 5

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 6

    2 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 14
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt
    8       | Specifier . error
    9       | Specifier . error SEMI

    error  shift, and go to state 15
    ID     shift, and go to state 16
    SEMI   shift, and go to state 17

    ExtDecList  go to state 18
    VarDec      go to state 19
    FunDec      go to state 20


State 8

   14 Specifier: StructSpecifier .

    $default  reduce using rule 14 (Specifier)


State 9

    7 ExtDef: error SEMI .

    $default  reduce using rule 7 (ExtDef)


State 10

   17 OptTag: ID .
   19 Tag: ID .

    LC        reduce using rule 17 (OptTag)
    $default  reduce using rule 19 (Tag)


State 11

   15 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 21


State 12

   16 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 16 (StructSpecifier)


State 13

    0 $accept: Program $end .

    $default  accept


State 14

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 15

    8 ExtDef: Specifier error .
    9       | Specifier error . SEMI

    SEMI  shift, and go to state 22

    $default  reduce using rule 8 (ExtDef)


State 16

   20 VarDec: ID .
   23 FunDec: ID . LP VarList RP
   24       | ID . LP RP
   25       | ID . LP error RP

    LP  shift, and go to state 23

    $default  reduce using rule 20 (VarDec)


State 17

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 18

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 24


State 19

   10 ExtDecList: VarDec .
   11           | VarDec . COMMA ExtDecList
   12           | VarDec . error ExtDecList
   21 VarDec: VarDec . LB INT RB
   22       | VarDec . LB error RB

    error  shift, and go to state 25
    LB     shift, and go to state 26
    COMMA  shift, and go to state 27

    SEMI  reduce using rule 10 (ExtDecList)


State 20

    6 ExtDef: Specifier FunDec . CompSt

    LC  shift, and go to state 28

    CompSt  go to state 29


State 21

   15 StructSpecifier: STRUCT OptTag LC . DefList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 46 (DefList)

    Specifier        go to state 30
    StructSpecifier  go to state 8
    DefList          go to state 31
    Def              go to state 32


State 22

    9 ExtDef: Specifier error SEMI .

    $default  reduce using rule 9 (ExtDef)


State 23

   23 FunDec: ID LP . VarList RP
   24       | ID LP . RP
   25       | ID LP . error RP

    error   shift, and go to state 33
    RP      shift, and go to state 34
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 35
    StructSpecifier  go to state 8
    VarList          go to state 36
    ParamDec         go to state 37


State 24

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 25

   12 ExtDecList: VarDec error . ExtDecList

    ID  shift, and go to state 38

    ExtDecList  go to state 39
    VarDec      go to state 19


State 26

   21 VarDec: VarDec LB . INT RB
   22       | VarDec LB . error RB

    error  shift, and go to state 40
    INT    shift, and go to state 41


State 27

   11 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 38

    ExtDecList  go to state 42
    VarDec      go to state 19


State 28

   29 CompSt: LC . DefList StmtList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 46 (DefList)

    Specifier        go to state 30
    StructSpecifier  go to state 8
    DefList          go to state 43
    Def              go to state 32


State 29

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 30

   47 Def: Specifier . DecList SEMI
   48    | Specifier . error SEMI
   49    | Specifier . DecList error

    error  shift, and go to state 44
    ID     shift, and go to state 38

    VarDec   go to state 45
    DecList  go to state 46
    Dec      go to state 47


State 31

   15 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 48


State 32

   45 DefList: Def . DefList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 46 (DefList)

    Specifier        go to state 30
    StructSpecifier  go to state 8
    DefList          go to state 49
    Def              go to state 32


State 33

   25 FunDec: ID LP error . RP

    RP  shift, and go to state 50


State 34

   24 FunDec: ID LP RP .

    $default  reduce using rule 24 (FunDec)


State 35

   28 ParamDec: Specifier . VarDec

    ID  shift, and go to state 38

    VarDec  go to state 51


State 36

   23 FunDec: ID LP VarList . RP

    RP  shift, and go to state 52


State 37

   26 VarList: ParamDec . COMMA VarList
   27        | ParamDec .

    COMMA  shift, and go to state 53

    $default  reduce using rule 27 (VarList)


State 38

   20 VarDec: ID .

    $default  reduce using rule 20 (VarDec)


State 39

   12 ExtDecList: VarDec error ExtDecList .

    $default  reduce using rule 12 (ExtDecList)


State 40

   22 VarDec: VarDec LB error . RB

    RB  shift, and go to state 54


State 41

   21 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 55


State 42

   11 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 11 (ExtDecList)


State 43

   29 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 56
    MINUS   shift, and go to state 57
    NOT     shift, and go to state 58
    LP      shift, and go to state 59
    INT     shift, and go to state 60
    FLOAT   shift, and go to state 61
    RETURN  shift, and go to state 62
    IF      shift, and go to state 63
    WHILE   shift, and go to state 64
    ID      shift, and go to state 65
    LC      shift, and go to state 28

    RC  reduce using rule 31 (StmtList)

    CompSt    go to state 66
    StmtList  go to state 67
    Stmt      go to state 68
    Exp       go to state 69


State 44

   48 Def: Specifier error . SEMI

    SEMI  shift, and go to state 70


State 45

   21 VarDec: VarDec . LB INT RB
   22       | VarDec . LB error RB
   52 Dec: VarDec .
   53    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 71
    LB        shift, and go to state 26

    $default  reduce using rule 52 (Dec)


State 46

   47 Def: Specifier DecList . SEMI
   49    | Specifier DecList . error

    error  shift, and go to state 72
    SEMI   shift, and go to state 73


State 47

   50 DecList: Dec .
   51        | Dec . COMMA DecList

    COMMA  shift, and go to state 74

    $default  reduce using rule 50 (DecList)


State 48

   15 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 15 (StructSpecifier)


State 49

   45 DefList: Def DefList .

    $default  reduce using rule 45 (DefList)


State 50

   25 FunDec: ID LP error RP .

    $default  reduce using rule 25 (FunDec)


State 51

   21 VarDec: VarDec . LB INT RB
   22       | VarDec . LB error RB
   28 ParamDec: Specifier VarDec .

    LB  shift, and go to state 26

    $default  reduce using rule 28 (ParamDec)


State 52

   23 FunDec: ID LP VarList RP .

    $default  reduce using rule 23 (FunDec)


State 53

   26 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 35
    StructSpecifier  go to state 8
    VarList          go to state 75
    ParamDec         go to state 37


State 54

   22 VarDec: VarDec LB error RB .

    $default  reduce using rule 22 (VarDec)


State 55

   21 VarDec: VarDec LB INT RB .

    $default  reduce using rule 21 (VarDec)


State 56

   39 Stmt: error . SEMI

    SEMI  shift, and go to state 76


State 57

   63 Exp: MINUS . Exp
   81    | MINUS . error

    error  shift, and go to state 77
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59
    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    ID     shift, and go to state 65

    Exp  go to state 78


State 58

   64 Exp: NOT . Exp
   82    | NOT . error

    error  shift, and go to state 79
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59
    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    ID     shift, and go to state 65

    Exp  go to state 80


State 59

   62 Exp: LP . Exp RP
   80    | LP . error RP

    error  shift, and go to state 81
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59
    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    ID     shift, and go to state 65

    Exp  go to state 82


State 60

   70 Exp: INT .

    $default  reduce using rule 70 (Exp)


State 61

   71 Exp: FLOAT .

    $default  reduce using rule 71 (Exp)


State 62

   35 Stmt: RETURN . Exp SEMI
   41     | RETURN . Exp error

    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59
    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    ID     shift, and go to state 65

    Exp  go to state 83


State 63

   36 Stmt: IF . LP Exp RP Stmt
   37     | IF . LP Exp RP Stmt ELSE Stmt
   42     | IF . LP error RP Stmt
   43     | IF . LP error RP Stmt ELSE Stmt

    LP  shift, and go to state 84


State 64

   38 Stmt: WHILE . LP Exp RP Stmt
   44     | WHILE . LP error RP Stmt

    LP  shift, and go to state 85


State 65

   65 Exp: ID . LP Args RP
   66    | ID . LP RP
   69    | ID .
   83    | ID . LP error RP

    LP  shift, and go to state 86

    $default  reduce using rule 69 (Exp)


State 66

   34 Stmt: CompSt .

    $default  reduce using rule 34 (Stmt)


State 67

   29 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 87


State 68

   30 StmtList: Stmt . StmtList

    error   shift, and go to state 56
    MINUS   shift, and go to state 57
    NOT     shift, and go to state 58
    LP      shift, and go to state 59
    INT     shift, and go to state 60
    FLOAT   shift, and go to state 61
    RETURN  shift, and go to state 62
    IF      shift, and go to state 63
    WHILE   shift, and go to state 64
    ID      shift, and go to state 65
    LC      shift, and go to state 28

    RC  reduce using rule 31 (StmtList)

    CompSt    go to state 66
    StmtList  go to state 88
    Stmt      go to state 68
    Exp       go to state 69


State 69

   32 Stmt: Exp . SEMI
   33     | Exp . error SEMI
   40     | Exp . error
   54 Exp: Exp . ASSIGNOP Exp
   55    | Exp . AND Exp
   56    | Exp . OR Exp
   57    | Exp . RELOP Exp
   58    | Exp . PLUS Exp
   59    | Exp . MINUS Exp
   60    | Exp . STAR Exp
   61    | Exp . DIV Exp
   67    | Exp . LB Exp RB
   68    | Exp . DOT ID
   72    | Exp . ASSIGNOP error
   73    | Exp . AND error
   74    | Exp . OR error
   75    | Exp . RELOP error
   76    | Exp . PLUS error
   77    | Exp . MINUS error
   78    | Exp . STAR error
   79    | Exp . DIV error
   84    | Exp . LB error RB
   85    | Exp . LB Exp error RB

    error     shift, and go to state 89
    ASSIGNOP  shift, and go to state 90
    OR        shift, and go to state 91
    AND       shift, and go to state 92
    RELOP     shift, and go to state 93
    PLUS      shift, and go to state 94
    MINUS     shift, and go to state 95
    STAR      shift, and go to state 96
    DIV       shift, and go to state 97
    DOT       shift, and go to state 98
    LB        shift, and go to state 99
    SEMI      shift, and go to state 100


State 70

   48 Def: Specifier error SEMI .

    $default  reduce using rule 48 (Def)


State 71

   53 Dec: VarDec ASSIGNOP . Exp

    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59
    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    ID     shift, and go to state 65

    Exp  go to state 101


State 72

   49 Def: Specifier DecList error .

    $default  reduce using rule 49 (Def)


State 73

   47 Def: Specifier DecList SEMI .

    $default  reduce using rule 47 (Def)


State 74

   51 DecList: Dec COMMA . DecList

    ID  shift, and go to state 38

    VarDec   go to state 45
    DecList  go to state 102
    Dec      go to state 47


State 75

   26 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 26 (VarList)


State 76

   39 Stmt: error SEMI .

    $default  reduce using rule 39 (Stmt)


State 77

   81 Exp: MINUS error .

    $default  reduce using rule 81 (Exp)


State 78

   54 Exp: Exp . ASSIGNOP Exp
   55    | Exp . AND Exp
   56    | Exp . OR Exp
   57    | Exp . RELOP Exp
   58    | Exp . PLUS Exp
   59    | Exp . MINUS Exp
   60    | Exp . STAR Exp
   61    | Exp . DIV Exp
   63    | MINUS Exp .
   67    | Exp . LB Exp RB
   68    | Exp . DOT ID
   72    | Exp . ASSIGNOP error
   73    | Exp . AND error
   74    | Exp . OR error
   75    | Exp . RELOP error
   76    | Exp . PLUS error
   77    | Exp . MINUS error
   78    | Exp . STAR error
   79    | Exp . DIV error
   84    | Exp . LB error RB
   85    | Exp . LB Exp error RB

    LB  shift, and go to state 99

    $default  reduce using rule 63 (Exp)


State 79

   82 Exp: NOT error .

    $default  reduce using rule 82 (Exp)


State 80

   54 Exp: Exp . ASSIGNOP Exp
   55    | Exp . AND Exp
   56    | Exp . OR Exp
   57    | Exp . RELOP Exp
   58    | Exp . PLUS Exp
   59    | Exp . MINUS Exp
   60    | Exp . STAR Exp
   61    | Exp . DIV Exp
   64    | NOT Exp .
   67    | Exp . LB Exp RB
   68    | Exp . DOT ID
   72    | Exp . ASSIGNOP error
   73    | Exp . AND error
   74    | Exp . OR error
   75    | Exp . RELOP error
   76    | Exp . PLUS error
   77    | Exp . MINUS error
   78    | Exp . STAR error
   79    | Exp . DIV error
   84    | Exp . LB error RB
   85    | Exp . LB Exp error RB

    DOT  shift, and go to state 98
    LB   shift, and go to state 99

    $default  reduce using rule 64 (Exp)


State 81

   80 Exp: LP error . RP

    RP  shift, and go to state 103


State 82

   54 Exp: Exp . ASSIGNOP Exp
   55    | Exp . AND Exp
   56    | Exp . OR Exp
   57    | Exp . RELOP Exp
   58    | Exp . PLUS Exp
   59    | Exp . MINUS Exp
   60    | Exp . STAR Exp
   61    | Exp . DIV Exp
   62    | LP Exp . RP
   67    | Exp . LB Exp RB
   68    | Exp . DOT ID
   72    | Exp . ASSIGNOP error
   73    | Exp . AND error
   74    | Exp . OR error
   75    | Exp . RELOP error
   76    | Exp . PLUS error
   77    | Exp . MINUS error
   78    | Exp . STAR error
   79    | Exp . DIV error
   84    | Exp . LB error RB
   85    | Exp . LB Exp error RB

    ASSIGNOP  shift, and go to state 90
    OR        shift, and go to state 91
    AND       shift, and go to state 92
    RELOP     shift, and go to state 93
    PLUS      shift, and go to state 94
    MINUS     shift, and go to state 95
    STAR      shift, and go to state 96
    DIV       shift, and go to state 97
    DOT       shift, and go to state 98
    LB        shift, and go to state 99
    RP        shift, and go to state 104


State 83

   35 Stmt: RETURN Exp . SEMI
   41     | RETURN Exp . error
   54 Exp: Exp . ASSIGNOP Exp
   55    | Exp . AND Exp
   56    | Exp . OR Exp
   57    | Exp . RELOP Exp
   58    | Exp . PLUS Exp
   59    | Exp . MINUS Exp
   60    | Exp . STAR Exp
   61    | Exp . DIV Exp
   67    | Exp . LB Exp RB
   68    | Exp . DOT ID
   72    | Exp . ASSIGNOP error
   73    | Exp . AND error
   74    | Exp . OR error
   75    | Exp . RELOP error
   76    | Exp . PLUS error
   77    | Exp . MINUS error
   78    | Exp . STAR error
   79    | Exp . DIV error
   84    | Exp . LB error RB
   85    | Exp . LB Exp error RB

    error     shift, and go to state 105
    ASSIGNOP  shift, and go to state 90
    OR        shift, and go to state 91
    AND       shift, and go to state 92
    RELOP     shift, and go to state 93
    PLUS      shift, and go to state 94
    MINUS     shift, and go to state 95
    STAR      shift, and go to state 96
    DIV       shift, and go to state 97
    DOT       shift, and go to state 98
    LB        shift, and go to state 99
    SEMI      shift, and go to state 106


State 84

   36 Stmt: IF LP . Exp RP Stmt
   37     | IF LP . Exp RP Stmt ELSE Stmt
   42     | IF LP . error RP Stmt
   43     | IF LP . error RP Stmt ELSE Stmt

    error  shift, and go to state 107
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59
    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    ID     shift, and go to state 65

    Exp  go to state 108


State 85

   38 Stmt: WHILE LP . Exp RP Stmt
   44     | WHILE LP . error RP Stmt

    error  shift, and go to state 109
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59
    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    ID     shift, and go to state 65

    Exp  go to state 110


State 86

   65 Exp: ID LP . Args RP
   66    | ID LP . RP
   83    | ID LP . error RP

    error  shift, and go to state 111
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59
    RP     shift, and go to state 112
    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    ID     shift, and go to state 65

    Exp   go to state 113
    Args  go to state 114


State 87

   29 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 29 (CompSt)


State 88

   30 StmtList: Stmt StmtList .

    $default  reduce using rule 30 (StmtList)


State 89

   33 Stmt: Exp error . SEMI
   40     | Exp error .

    SEMI  shift, and go to state 115

    $default  reduce using rule 40 (Stmt)


State 90

   54 Exp: Exp ASSIGNOP . Exp
   72    | Exp ASSIGNOP . error

    error  shift, and go to state 116
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59
    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    ID     shift, and go to state 65

    Exp  go to state 117


State 91

   56 Exp: Exp OR . Exp
   74    | Exp OR . error

    error  shift, and go to state 118
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59
    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    ID     shift, and go to state 65

    Exp  go to state 119


State 92

   55 Exp: Exp AND . Exp
   73    | Exp AND . error

    error  shift, and go to state 120
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59
    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    ID     shift, and go to state 65

    Exp  go to state 121


State 93

   57 Exp: Exp RELOP . Exp
   75    | Exp RELOP . error

    error  shift, and go to state 122
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59
    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    ID     shift, and go to state 65

    Exp  go to state 123


State 94

   58 Exp: Exp PLUS . Exp
   76    | Exp PLUS . error

    error  shift, and go to state 124
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59
    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    ID     shift, and go to state 65

    Exp  go to state 125


State 95

   59 Exp: Exp MINUS . Exp
   77    | Exp MINUS . error

    error  shift, and go to state 126
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59
    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    ID     shift, and go to state 65

    Exp  go to state 127


State 96

   60 Exp: Exp STAR . Exp
   78    | Exp STAR . error

    error  shift, and go to state 128
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59
    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    ID     shift, and go to state 65

    Exp  go to state 129


State 97

   61 Exp: Exp DIV . Exp
   79    | Exp DIV . error

    error  shift, and go to state 130
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59
    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    ID     shift, and go to state 65

    Exp  go to state 131


State 98

   68 Exp: Exp DOT . ID

    ID  shift, and go to state 132


State 99

   67 Exp: Exp LB . Exp RB
   84    | Exp LB . error RB
   85    | Exp LB . Exp error RB

    error  shift, and go to state 133
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59
    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    ID     shift, and go to state 65

    Exp  go to state 134


State 100

   32 Stmt: Exp SEMI .

    $default  reduce using rule 32 (Stmt)


State 101

   53 Dec: VarDec ASSIGNOP Exp .
   54 Exp: Exp . ASSIGNOP Exp
   55    | Exp . AND Exp
   56    | Exp . OR Exp
   57    | Exp . RELOP Exp
   58    | Exp . PLUS Exp
   59    | Exp . MINUS Exp
   60    | Exp . STAR Exp
   61    | Exp . DIV Exp
   67    | Exp . LB Exp RB
   68    | Exp . DOT ID
   72    | Exp . ASSIGNOP error
   73    | Exp . AND error
   74    | Exp . OR error
   75    | Exp . RELOP error
   76    | Exp . PLUS error
   77    | Exp . MINUS error
   78    | Exp . STAR error
   79    | Exp . DIV error
   84    | Exp . LB error RB
   85    | Exp . LB Exp error RB

    ASSIGNOP  shift, and go to state 90
    OR        shift, and go to state 91
    AND       shift, and go to state 92
    RELOP     shift, and go to state 93
    PLUS      shift, and go to state 94
    MINUS     shift, and go to state 95
    STAR      shift, and go to state 96
    DIV       shift, and go to state 97
    DOT       shift, and go to state 98
    LB        shift, and go to state 99

    $default  reduce using rule 53 (Dec)


State 102

   51 DecList: Dec COMMA DecList .

    $default  reduce using rule 51 (DecList)


State 103

   80 Exp: LP error RP .

    $default  reduce using rule 80 (Exp)


State 104

   62 Exp: LP Exp RP .

    $default  reduce using rule 62 (Exp)


State 105

   41 Stmt: RETURN Exp error .

    $default  reduce using rule 41 (Stmt)


State 106

   35 Stmt: RETURN Exp SEMI .

    $default  reduce using rule 35 (Stmt)


State 107

   42 Stmt: IF LP error . RP Stmt
   43     | IF LP error . RP Stmt ELSE Stmt

    RP  shift, and go to state 135


State 108

   36 Stmt: IF LP Exp . RP Stmt
   37     | IF LP Exp . RP Stmt ELSE Stmt
   54 Exp: Exp . ASSIGNOP Exp
   55    | Exp . AND Exp
   56    | Exp . OR Exp
   57    | Exp . RELOP Exp
   58    | Exp . PLUS Exp
   59    | Exp . MINUS Exp
   60    | Exp . STAR Exp
   61    | Exp . DIV Exp
   67    | Exp . LB Exp RB
   68    | Exp . DOT ID
   72    | Exp . ASSIGNOP error
   73    | Exp . AND error
   74    | Exp . OR error
   75    | Exp . RELOP error
   76    | Exp . PLUS error
   77    | Exp . MINUS error
   78    | Exp . STAR error
   79    | Exp . DIV error
   84    | Exp . LB error RB
   85    | Exp . LB Exp error RB

    ASSIGNOP  shift, and go to state 90
    OR        shift, and go to state 91
    AND       shift, and go to state 92
    RELOP     shift, and go to state 93
    PLUS      shift, and go to state 94
    MINUS     shift, and go to state 95
    STAR      shift, and go to state 96
    DIV       shift, and go to state 97
    DOT       shift, and go to state 98
    LB        shift, and go to state 99
    RP        shift, and go to state 136


State 109

   44 Stmt: WHILE LP error . RP Stmt

    RP  shift, and go to state 137


State 110

   38 Stmt: WHILE LP Exp . RP Stmt
   54 Exp: Exp . ASSIGNOP Exp
   55    | Exp . AND Exp
   56    | Exp . OR Exp
   57    | Exp . RELOP Exp
   58    | Exp . PLUS Exp
   59    | Exp . MINUS Exp
   60    | Exp . STAR Exp
   61    | Exp . DIV Exp
   67    | Exp . LB Exp RB
   68    | Exp . DOT ID
   72    | Exp . ASSIGNOP error
   73    | Exp . AND error
   74    | Exp . OR error
   75    | Exp . RELOP error
   76    | Exp . PLUS error
   77    | Exp . MINUS error
   78    | Exp . STAR error
   79    | Exp . DIV error
   84    | Exp . LB error RB
   85    | Exp . LB Exp error RB

    ASSIGNOP  shift, and go to state 90
    OR        shift, and go to state 91
    AND       shift, and go to state 92
    RELOP     shift, and go to state 93
    PLUS      shift, and go to state 94
    MINUS     shift, and go to state 95
    STAR      shift, and go to state 96
    DIV       shift, and go to state 97
    DOT       shift, and go to state 98
    LB        shift, and go to state 99
    RP        shift, and go to state 138


State 111

   83 Exp: ID LP error . RP

    RP  shift, and go to state 139


State 112

   66 Exp: ID LP RP .

    $default  reduce using rule 66 (Exp)


State 113
